# trumanbox

./: AUTHORS  ChangeLog  INSTALL  README  acinclude.m4  configure.ac
doc/: CONFIGURATION  README  README.OLD
etc/bind/: README  db.root  named.conf  named.conf.options
etc/trumanbox/: clean_ebtables.sh  clean_iptables.sh  setupdb.sh  tb_setup.sh
etc/trumanbox/old/: bridge_config.sh  netfilter_setup.sh  netfilter_setup_transparent.sh  setting_up_the_bridge.sh
src/: .dns_resolver.c.swp  Makefile  Makefile.am  Makefile.in  config.h  configuration.c  configuration.h  configure.ac  definitions.h  dispatching.c  dispatching.cpp  dispatching.h  dns_resolver.c  dns_resolver.cpp  dns_resolver.h  franz.ini  helper_file.c  helper_file.cpp  helper_file.h  helper_net.c  helper_net.cpp  helper_net.h  iniparser.c  log_postgres.c  log_postgres.h  log_sqlite.c  log_sqlite.h  log_truman.c  log_truman.h  logger.c  logger.h  main.c  main.cpp  main.h  msg.c  msg.h  payload_alter_log.c  payload_alter_log.h  payload_ident.c  payload_ident.h  (+29 more)
src/.deps/: configuration.Po  dispatching.Po  dns_resolver.Po  ftp.Po  helper_file.Po  helper_net.Po  http.Po  http_get.Po  http_post.Po  http_put.Po  iniparser.Po  irc.Po  log_postgres.Po  log_sqlite.Tpo  log_truman.Po  logger.Po  main.Po  msg.Po  process_manager.Po  proto_handler.Po  proto_ident.Po  proto_ident_opendpi.Po  proto_ident_truman.Po  semaphore.Po  signals.Po  smtp.Po  tcp_handler.Po  udp_handler.Po  unknown.Po  unknown_udp.Po  wrapper.Po
src/common/: Makefile.am  configuration.cpp  configuration.h  iniparser.h  msg.h
src/configs/: devel.ini  franz.ini  log_postgres.ini  test.ini
src/logging/: Makefile.am  log_postgres.cpp  log_postgres.h  logbase.cpp  logbase.h
src/protocols/: Makefile.am  ftp.c  ftp.cpp  ftp.h  ftp_data.c  ftp_data.cpp  ftp_data.h  http.c  http.cpp  http.h  http_get.c  http_get.h  http_post.c  http_post.h  http_put.c  http_put.h  irc.c  irc.cpp  irc.h  proto_handler.c  proto_handler.cpp  proto_handler.h  proto_ident.c  proto_ident.cpp  proto_ident.h  proto_ident_opendpi.h  proto_ident_truman.c  proto_ident_truman.cpp  proto_ident_truman.h  smtp.c  smtp.cpp  smtp.h  ssl.c  ssl.cpp  ssl.h  unknown.c  unknown.cpp  unknown.h  unknown_udp.c  unknown_udp.cpp  (+1 more)
